# supplier-parts-system-pre

./: Cargo.toml  Dockerfile  README.md  api.rs  config.rs  entrypoint.sh  main.rs  package-lock.json  package.json  sccp_db.sql
frontend/: .env.production  package.json
frontend/src/: App.jsx  index.css  main.jsx
handlers/: admin_handler.rs  admin_middleware.rs  analytics_handler.rs  capability_handler.rs  mod.rs  notification_handler.rs  order_handler.rs  payment_handler.rs  quote_handler.rs  rfq_handler.rs  ws_handler.rs
migrations/: 01_sccp.sql  sccp_db.sql
models/: analytics.rs  capability.rs  chat.rs  company.rs  mod.rs  notification.rs  order.rs  payment.rs  user.rs
services/: admin_service.rs  analytics_service.rs  auth_service.rs  capability_service.rs  chat_server.rs  company_service.rs  matching_service.rs  mod.rs  notification_service.rs  order_service.rs  payment_service.rs  quote_service.rs  rfq_service.rs  user_service.rs
src/: App.jsx  api.rs  config.rs  errors.rs  main.jsx  main.rs
src/api/: index.js
src/components/: AdminRoute.jsx  ChatBox.jsx  Navbar.jsx  NotificationBell.jsx  ProtectedRoute.jsx  SupplierAnalytics.jsx
src/context/: AuthContext.jsx  NotificationContext.jsx
src/handlers/: analytics_handler.rs  auth_handler.rs  auth_middleware.rs  chat_handler.rs  company_handler.rs  mod.rs  quote_handler.rs  rfq_handler.rs  user_handler.rs
src/models/: analytics.rs  company.rs  mod.rs  order.rs  quote.rs  rfq.rs  user.rs
tests/: auth_test.rs  mod.rs  rfq_test.rs
uploads/: database_v2_setup.sql
utils/: auth_utils.rs
(+39 files in other folders)
